@@ -1,3 +1,9 @@
+2015-03-30  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR ld/18169
+	* ld-elf/linkinfo1a.d: Updated.
+	* ld-elf/linkinfo1b.d: Likewise.
+
 2015-03-27  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* ld-x86-64/pr18160.d: Don't run for x86_64-*-nacl* target.
